--- a/style.css
+++ b/style.css
@@ -20,19 +20,26 @@ body{
     grid-template-columns: repeat(4,100px);
     grid-template-rows:minmax(120px,auto) repeat(5,100px);
     gap: 0;
+
 }
 .grid-container>button{
     cursor: pointer;
     font-size: 2rem;
     border: 1px solid white;
     outline: none;
-    background-color: rgba(255, 255, 255, .75);
+    background-color: #191d2b;
     color:#27AE60;
+  
+}
+.red{
+    background-color:red;
 }
 .grid-container> button:hover{
     background-color: rgba(255, 255, 255, .9);
 
 }
+
+
 .ac-button{
     grid-column: span 2;
 }
@@ -55,4 +62,7 @@ body{
   .screen .current-output {
     color: white;
     font-size: 2.5rem;
+  }
+  h3{
+      display: inline;
   }
